Adicionados ponteiros da modal

--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -5,23 +5,25 @@
 
    <title>Rocket.Q - Perguntas e Respostas</title>
    <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
    <!-- View Port -->
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
    <!-- CSS -->
-   <link rel="stylesheet" href="style/global.css">
-   <link rel="stylesheet" href="style/room.css">
-   <link rel="stylesheet" href="style/modal.css">
+   <link rel="stylesheet" href="style/global.css" />
+   <link rel="stylesheet" href="style/room.css" />
+   <link rel="stylesheet" href="style/modal.css" />
 
    <!-- Fonts -->
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+   <link rel="preconnect" href="https://fonts.googleapis.com" />
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;500;700&display=swap"
+      rel="stylesheet" />
 
    <!-- SCRIPTS -->
-   <script scr="/scripts/main.js" defer type="module"></script>
+   <script scr="scripts/main.js" defer type="module"></script>
+
 </head>
 
 <body>
@@ -30,18 +32,18 @@
       <header>
 
          <a href="#">
-            <img src="images/logo.svg" alt="Rocket.Q logo" />
+            <img src="/images/logo.svg" alt="Rocket.Q logo" />
          </a>
 
          <div class="buttons">
 
             <div class="button outlined">
                #323243
-               <img src="images/copy.svg" alt="" />
+               <img src="/images/copy.svg" alt="" />
             </div>
 
             <a href="#" class="button">
-               <img src="images/users-white.svg" alt="">
+               <img src="/images/users-white.svg" alt="" />
                Criar sala
             </a>
 
@@ -58,7 +60,7 @@
 
                <footer>
                   <div>
-                     <img src="images/lock_black.svg" alt="Cadeado">
+                     <img src="/images/lock_black.svg" alt="Cadeado" />
                      Esta pergunta é anônima
                   </div>
                   <button>Enviar</button>
@@ -73,7 +75,7 @@
                <div class="question-wrapper">
                   <div class="question-content">
                      <div class="user">
-                        <img src="images/user.svg" alt="Avatar">
+                        <img src="/images/user.svg" alt="Avatar">
                      </div>
                      <div class="question">
                         <p>Qual a diferença entre const, var e let no Javascript?</p>
@@ -82,11 +84,11 @@
 
                   <div class="actions">
                      <a href="#" class="check">
-                        <img src="images/check.svg" alt="Marcar como lida">
+                        <img src="/images/check.svg" alt="Marcar como lida" />
                         Marcar como lida
                      </a>
                      <a href="#" class="delete">
-                        <img src="images/trash.svg" alt="Excluir">
+                        <img src="/images/trash.svg" alt="Excluir" />
                         Excluir
                      </a>
                   </div>
@@ -95,7 +97,7 @@
                <div class="question-wrapper">
                   <div class="question-content">
                      <div class="user">
-                        <img src="images/user.svg" alt="Avatar">
+                        <img src="/images/user.svg" alt="Avatar" />
                      </div>
                      <div class="question">
                         <p>O que é Typescript?</p>
@@ -104,11 +106,11 @@
 
                   <div class="actions">
                      <a href="#" class="check">
-                        <img src="images/check.svg" alt="Marcar como lida">
+                        <img src="/images/check.svg" alt="Marcar como lida" />
                         Marcar como lida
                      </a>
                      <a href="#" class="delete">
-                        <img src="images/trash.svg" alt="Excluir">
+                        <img src="/images/trash.svg" alt="Excluir" />
                         Excluir
                      </a>
                   </div>
@@ -117,7 +119,7 @@
                <div class="question-wrapper">
                   <div class="question-content">
                      <div class="user">
-                        <img src="images/user.svg" alt="Avatar">
+                        <img src="/images/user.svg" alt="Avatar" />
                      </div>
                      <div class="question">
                         <p>Como ser um bom programador sem gastar muito com cursos e também sem estudar igual um louco?
@@ -128,11 +130,11 @@
 
                   <div class="actions">
                      <a href="#" class="check">
-                        <img src="images/check.svg" alt="Marcar como lida">
+                        <img src="/images/check.svg" alt="Marcar como lida" />
                         Marcar como lida
                      </a>
                      <a href="#" class="delete">
-                        <img src="images/trash.svg" alt="Excluir">
+                        <img src="/images/trash.svg" alt="Excluir" />
                         Excluir
                      </a>
                   </div>
@@ -141,7 +143,7 @@
                <div class="question-wrapper read">
                   <div class="question-content">
                      <div class="user">
-                        <img src="images/user.svg" alt="Avatar">
+                        <img src="/images/user.svg" alt="Avatar" />
                      </div>
                      <div class="question">
                         <p>O que é Asp Net Core MVC?</p>
@@ -150,7 +152,7 @@
 
                   <div class="actions">
                      <a href="#" class="delete">
-                        <img src="images/trash.svg" alt="Excluir">
+                        <img src="/images/trash.svg" alt="Excluir" />
                         Excluir
                      </a>
                   </div>
@@ -164,18 +166,21 @@
    </div>
 
    <!--- Modal --->
-   <div class="modal-wrapper ">
+   <div class="modal-wrapper">
       <div class="modal">
          <h2>Excluir Pergunta</h2>
-         <p>Tem certeza que deseja excluir essa pergunta?</p>
-         <form action="#">
-            <label for-id="password" class="sr-only">Digite sua senha</label>
-            <input type="password" id="password" name="password" placeholder="Digite sua senha admin">
+         <p>Tem certeza que você deseja excluir esta pergunta?</p>
+
+         <form action="#" method="POST">
+            <label class="sr-only" for-id="password">Digite sua senha admin</label>
+            <input type="password" id="password" name="password" placeholder="Digite sua senha" />
+
             <div class="buttons">
                <div class="button grey cancel">Cancelar</div>
                <button class="red">Sim, excluir</button>
             </div>
          </form>
+
       </div>
    </div>
 
