Alterado o main js

--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -176,7 +176,7 @@
             <input type="password" id="password" name="password" placeholder="Digite sua senha" />
 
             <div class="buttons">
-               <div class="button grey cancel">Cancelar</div>
+               <div class="button cancel grey">Cancelar</div>
                <button class="red">Sim, excluir</button>
             </div>
          </form>
